# oat_rust_pnnl

./: .gitignore  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
src/: entries.rs  lib.rs  main.rs
src/algebra/: mod.rs
src/algebra/chain_complexes/: barcode.rs  mod.rs
src/algebra/chains/: barcode.rs  factored.rs  jordan.rs  mod.rs
src/algebra/matrices/: debug.rs  developer_notes.rs  display.rs  mod.rs  random_constructors.rs  test.rs
src/algebra/rings/: mod.rs  operator_traits.rs  traits.rs
src/algebra/vectors/: entries.rs  mod.rs  operations.rs
src/algebra/zigzag/: cospan_pipeline.rs  cospans.rs  decompose.rs  hypergraph_pipeline.rs  mod.rs  span_pipeline.rs  spans.rs
src/developer/: guidelines.rs  mod.rs  rust_debugging.rs
src/matrices/: debug.rs  developer_notes.rs  display.rs  matrix_oracle_traits.rs  mod.rs  random_constructors.rs
src/matrices/help/: common_challenges.rs  creating_new_matrix_types.rs  mod.rs  trouble_shooting.rs  working_with_matrices.rs
src/matrices/matrix_types/: hash_of_vec.rs  matching.rs  mod.rs  oracle_ref.rs  prepend_viewmaj.rs  scalar_matrices.rs  transpose.rs  vec_of_csvec.rs  vec_of_vec.rs
src/matrices/operations/: invert.rs  mod.rs  multiply.rs  transform_entry_wise.rs  transform_vector_wise.rs  transpose.rs  vec_of_vec_reduction.rs
src/rings/: mod.rs
src/rings/operator_structs/: field_prime_order.rs  mod.rs  ring_native.rs
src/topology/: homology.rs  mod.rs  point_cloud.rs
src/topology/simplicial/: boundary.rs
src/topology/zigzag/: mod.rs  zigzag.rs
src/tutorials/: clones_copies_references.rs  homology.rs  homology_with_umatch.rs  matrix_oracle_first_steps.rs  mod.rs  oat_quick_start.rs  packages.rs  persistent_homology.rs  rust_workflow.rs  solar_quick_start.rs  traits.rs  work_with_clones_and_copies.rs  work_with_references.rs
src/tutorials/rust/: clones_and_copies.rs  mod.rs  references.rs  rust_workflow.rs  traits.rs
src/utilities/: binary_search.rs  combinatorics.rs  distances.rs  indexing_and_bijection.rs  mod.rs  order.rs  partial_order.rs  random.rs  sequences_and_ordinals.rs  sets.rs  statistics.rs
src/utilities/functions/: compose.rs  evaluate.rs  misc_functions.rs  mod.rs
src/utilities/heaps/: heap.rs  mod.rs
src/utilities/iterators/: general.rs  mod.rs  (+1 more)
src/vectors/: linear_combinations.rs  mod.rs  operations.rs
(+88 files in other folders)
