[package]
name = "oat_rust"
version = "0.2.0"
authors = ["Gregory Henselman-Petrusek Roek<gregory.roek@pnnl.gov>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-panic = "1.0.1"
auto_impl = "0.4.1"
criterion = "0.6.0"
# debugit = "0.2.0" # this only works with nightly
derive-getters = "0.2.0"
derive-new = "0.5.9"
good_lp = { version = "1.4.0", features = ["minilp"], default-features = false }
gag = { version = "1.0.0", optional = true }
# grb = { version = "1.3.0", optional = true }
grb = { version = "3.0.1", features = ['gurobi12'], optional = true }
indicatif = "0.17.2"
itertools = "0.10.0"
ndarray = "0.15.6"
num = "0.4.0"
num-traits = "0.2.14"
primes = "0.3.0"
pyo3 = { version = "0.25.0", features = ["ordered-float"] }
ordered-float = "3.4.0"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.42"
sprs = "0.11.3"
unzip-n = "0.1.2"

[features]
gurobi = ["grb", "gag"]

[profile.dev]
debug = true

[profile.release]
# debug = true
